# Civil-Engineer-Classifier-Bot

./: .env.example  .gitignore  README.md  pyproject.toml
dictionaries/: functions.txt  stages.txt  units.txt  work_types.txt
docs/: improvements.md
docs/bpmn/: reporting_flow.bpmn
docs/logging/: logging_spec.md
docs/uml/: reporting_activity.puml  reporting_class_diagram.puml  reporting_queue_worker_activity.puml
schemas/: classification_result.schema.json
scripts/: launch_webhook_stack_macos.sh  stop_webhook_stack_macos.sh
src/: main_polling.py  main_queue_worker.py  main_webhook.py
src/application/: __init__.py  classification_orchestrator.py  decimal_volume.py  fallback_mapper.py  json_schema_validator.py  llm_payload_normalizer.py  message_preprocessor.py  prompt_builder.py  queue_worker.py  startup_preflight.py  unit_key_normalizer.py
src/config/: settings.py
src/domain/: __init__.py  enums.py  models.py
src/infrastructure/: __init__.py  dictionary_repository.py  gemini_client.py  google_sheets_repository.py  pending_confirmation_repository.py  queue_repository.py
src/observability/: __init__.py  correlation_id_factory.py  log_context.py  log_events.py  log_sink_file.py  log_sink_stdout.py  logging_service.py  logging_setup.py
src/presentation/: __init__.py  notification_service.py  telegram_polling_handler.py
